<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="film"
            type="com.wouterdevos.starwarsfilms.valueobject.Film" />

        <variable
            name="loading"
            type="java.lang.Boolean" />

        <variable
            name="error"
            type="java.lang.Boolean" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/film_detail_margin"
            android:text="@string/title_release_date" />

        <TextView
            android:id="@+id/release_date"
            style="@style/TextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@{film.releaseDate}"
            tools:text="1977-05-25" />

        <TextView
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/film_detail_margin"
            android:text="@string/title_title" />

        <TextView
            android:id="@+id/title"
            style="@style/TextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@{film.title}"
            tools:text="A New Hope" />

        <TextView
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/film_detail_margin"
            android:text="@string/title_opening_crawl" />

        <TextView
            android:id="@+id/opening_crawl"
            style="@style/TextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@{film.openingCrawl}"
            tools:text="It is a period of civil war.\r\nRebel spaceships, striking\r\nfrom a hidden base, have won\r\ntheir first victory against\r\nthe evil Galactic Empire.\r\n\r\nDuring the battle, Rebel\r\nspies managed to steal secret\r\nplans to the Empire's\r\nultimate weapon, the DEATH\r\nSTAR, an armored space\r\nstation with enough power\r\nto destroy an entire planet.\r\n\r\nPursued by the Empire's\r\nsinister agents, Princess\r\nLeia races home aboard her\r\nstarship, custodian of the\r\nstolen plans that can save her\r\npeople and restore\r\nfreedom to the galaxy...." />

        <TextView
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/film_detail_margin"
            android:text="@string/title_characters" />

        <ProgressBar
            android:id="@+id/progress_indicator"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:visibility="@{loading != null &amp;&amp; loading ? View.VISIBLE : View.GONE}" />

        <TextView
            android:id="@+id/no_characters_available"
            style="@style/TextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/message_no_characters_available"
            android:visibility="@{error != null &amp;&amp; error ? View.VISIBLE : View.GONE}" />

    </LinearLayout>


</layout>